[package]
edition = "2021"
name = "geiger"
version = "0.1.0"

[workspace]
members = ["nano-fmt"]

[dependencies]
embedded-hal = "0.2.3"
nano-fmt = {path = "nano-fmt"}
panic-halt = "0.2.0"

[dependencies.attiny-hal]
features = ["attiny2313", "rt"]
git = "https://github.com/rahix/avr-hal"
rev = "533159f6c6a508abe4ecec34bf5013d7a1eb0cf5"

[dependencies.avr-hal-generic]
git = "https://github.com/rahix/avr-hal"
rev = "533159f6c6a508abe4ecec34bf5013d7a1eb0cf5"

[dependencies.avr-device]
version = "0.4.0"

[profile.dev]
lto = true
opt-level = "z"
panic = "abort"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"
panic = "abort"

[package.metadata.cargo_avrdude]
args = ["-p", "t2313", "-e", "-U", "flash:w:{}"]
