[package]
authors = ["Ievgenii Meshcheriakov <eugen@debian.org>"]
description = "Geiger Counter with Serial Data Reporting"
edition = "2021"
license = "GPL-3.0+"
name = "geiger"
readme = "README.md"
repository = "https://github.com/eugmes/geiger-rs"
version = "0.1.0"

[workspace]
members = ["nano-fmt", "nano-fmt-macro", "progmem"]

[dependencies]
avr-device = {version = "0.7.0", features = ["attiny2313"]}
embedded-hal = "1.0.0"
nano-fmt = {path = "nano-fmt"}
panic-halt = "1.0.0"
progmem = {path = "progmem"}

[dependencies.attiny-hal]
features = ["attiny2313", "rt"]
git = "https://github.com/rahix/avr-hal"
rev = "af47f08c315dfacd7d1f8437f8bcefc34cec0959"

[dependencies.avr-hal-generic]
git = "https://github.com/rahix/avr-hal"
rev = "af47f08c315dfacd7d1f8437f8bcefc34cec0959"

[profile.dev]
lto = true
opt-level = "z"
panic = "abort"

[profile.release]
codegen-units = 1
debug = 0
lto = true
opt-level = "s"
panic = "abort"

[package.metadata.cargo_avrdude]
args = ["-p", "t2313", "-e", "-U", "flash:w:{}"]
